--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -156,6 +156,8 @@ zh:
           title: 供应商
         create:
           title: 选为供应商
+        destroy:
+          title: 移除供应商
       productions:
         index:
           title: 进货
