fix en new form

--- a/config/locales/en.controller.yml
+++ b/config/locales/en.controller.yml
@@ -32,6 +32,8 @@ en:
       production_items:
         index:
           title: Items
+        delivery:
+          title: Delivery
       production_plans:
         index:
           title: Plans
