--- a/config/locales/en.controller.yml
+++ b/config/locales/en.controller.yml
@@ -100,8 +100,10 @@ en:
           title: Sold List
     in:
       title: Import
+      items:
+        edit_assign:
+          title: Assign Provider
       product_taxons:
-
       productions:
         index:
           title: Buy
