--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -51,6 +51,8 @@ zh:
       products:
         index:
           title: 产品
+        all:
+          title: 产品
         show:
           title: 产品详情
         buy:
