--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -77,6 +77,7 @@ zh:
       factory/production_item:
         state: 状态
         qr_code: 编码
+        amount: 数量/重量
         came_at: 生产/到货时间
         room_id: 所在仓库
         grid_id: 所在货架
