--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -11,6 +11,8 @@ zh:
         title: 在线商城
       show:
         add: 加入购物车
+      change_dispatch:
+        title: 切换
     product_plans:
       index:
         title: 产品批次
