--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -55,6 +55,7 @@ zh:
         scene_id: 场景
         partial: 可作为配件
         products_count: 产品数
+        provides_count: 供应商数量
         enabled: 上架
         nav: 单独菜单
       factory/part_taxon_provider:
