--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -69,9 +69,11 @@ zh:
       product_components:
         index:
           title: 产品组成
-      product_parts:
+      component_parts:
         index:
           title: 产品组成
+        create:
+          title: 加入零件
       taxon_components:
         index:
           title: 产品组成设置
