--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -37,7 +37,7 @@ zh:
       taxon:
         products:
           index:
-            title: 产品列表
+            title: 产品
       brands:
         index:
           title: 旗下品牌
