--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -38,6 +38,8 @@ zh:
         products:
           index:
             title: 产品
+          edit_image:
+            title: 商品图片
       brands:
         index:
           title: 旗下品牌
@@ -66,6 +68,8 @@ zh:
           title: 产品详情
         buy:
           title: 采购
+        edit_image:
+          title: 产品图片
       product_components:
         index:
           title: 产品组成
