suport set provide id

--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -208,6 +208,8 @@ zh:
       items:
         index:
           title: 订单
+        edit_assign:
+          title: 选择供应商
       orders:
         index:
           title: 采购订单
