--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -126,7 +126,7 @@ zh:
       part_plans:
         index:
           title: 入库计划
-      part_providers:
+      production_provides:
         index:
           title: 供应商管理
       productions:
