--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -21,7 +21,7 @@ zh:
         max_select: 最多选择数
       factory/production:
         name: 型号
-        cost_price: 成本价
+        cost_price: 采购价
         profit_price: 利润
         price: 售价
         card_price: 会员价
