--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -83,7 +83,7 @@ zh:
           title: 加入零件
       taxon_components:
         index:
-          title: 产品组成设置
+          title: 产品组成
         part:
           title: 产品组成
       taxons:
